--- a/blog/authors.yml
+++ b/blog/authors.yml
@@ -24,7 +24,7 @@ slorber:
     github: slorber
     newsletter: https://thisweekinreact.com
 
-sara-golbek:
+saraperez:
   name: Sara Perez
   title: Full-Stack Software Engineer
   url: https://www.linkedin.com/in/saragolbek
